--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.ts",
-    "download-contracts": "ts-node download-contracts.tsx"
+    "download-contracts": "ts-node ./download-contracts.ts"
   },
   "keywords": [],
   "author": "",
