--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "promise-fs": "^2.1.1"
   },
   "devDependencies": {
     "@tsconfig/node14": "^1.0.0",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.31",
+    "@types/promise-fs": "^2.1.1",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
